fix: TOC dark mode link color, article 000030 font to Times New Roman

--- a/css/article-detail.css
+++ b/css/article-detail.css
@@ -90,7 +90,7 @@ padding-left: 10px;
 }
 
 .toc a {
-color: #1b1b1b;
+color: var(--text-primary);
     /*单行文本溢出显示省略号*/
     width: 100%;
     overflow: hidden;
